Feat: Finish All Feature
* Delete state: Judge index and delet by Index.
* Update_Reply: Judge index and store index, then
                change State.
* Update_Request: using state index to change context.
* TODO: some function can be integration.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon index.js",
     "db:start": "make",
-    "db:stop": "make clean"
+    "db:stop": "make clean",
+    "db:entry": "make entry"
   },
   "keywords": [],
   "author": "",
